; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_jp.c_RKSJ_AddCodeSpaceRange.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encoder_jp.c_RKSJ_AddCodeSpaceRange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }

@__const.RKSJ_AddCodeSpaceRange.code_space_range1 = private unnamed_addr constant %struct.TYPE_9__ { i32 0, i32 128, i32 0 }, align 4
@__const.RKSJ_AddCodeSpaceRange.code_space_range2 = private unnamed_addr constant %struct.TYPE_9__ { i32 33088, i32 40956, i32 0 }, align 4
@__const.RKSJ_AddCodeSpaceRange.code_space_range3 = private unnamed_addr constant %struct.TYPE_9__ { i32 160, i32 223, i32 0 }, align 4
@__const.RKSJ_AddCodeSpaceRange.code_space_range4 = private unnamed_addr constant %struct.TYPE_9__ { i32 57408, i32 64764, i32 0 }, align 4
@HPDF_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_8__*)* @RKSJ_AddCodeSpaceRange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @RKSJ_AddCodeSpaceRange(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__, align 4
  %5 = alloca %struct.TYPE_9__, align 4
  %6 = alloca %struct.TYPE_9__, align 4
  %7 = alloca %struct.TYPE_9__, align 4
  %8 = alloca { i64, i32 }, align 4
  %9 = alloca { i64, i32 }, align 4
  %10 = alloca { i64, i32 }, align 4
  %11 = alloca { i64, i32 }, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %12 = bitcast %struct.TYPE_9__* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_9__* @__const.RKSJ_AddCodeSpaceRange.code_space_range1 to i8*), i64 12, i1 false)
  %13 = bitcast %struct.TYPE_9__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %13, i8* align 4 bitcast (%struct.TYPE_9__* @__const.RKSJ_AddCodeSpaceRange.code_space_range2 to i8*), i64 12, i1 false)
  %14 = bitcast %struct.TYPE_9__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %14, i8* align 4 bitcast (%struct.TYPE_9__* @__const.RKSJ_AddCodeSpaceRange.code_space_range3 to i8*), i64 12, i1 false)
  %15 = bitcast %struct.TYPE_9__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 bitcast (%struct.TYPE_9__* @__const.RKSJ_AddCodeSpaceRange.code_space_range4 to i8*), i64 12, i1 false)
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %17 = bitcast { i64, i32 }* %8 to i8*
  %18 = bitcast %struct.TYPE_9__* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 12, i1 false)
  %19 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %8, i32 0, i32 0
  %20 = load i64, i64* %19, align 4
  %21 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %8, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @HPDF_CMapEncoder_AddCodeSpaceRange(%struct.TYPE_8__* %16, i64 %20, i32 %22)
  %24 = load i64, i64* @HPDF_OK, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %1
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  store i64 %31, i64* %2, align 8
  br label %85

32:                                               ; preds = %1
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %34 = bitcast { i64, i32 }* %9 to i8*
  %35 = bitcast %struct.TYPE_9__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %34, i8* align 4 %35, i64 12, i1 false)
  %36 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %9, i32 0, i32 0
  %37 = load i64, i64* %36, align 4
  %38 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %9, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = call i64 @HPDF_CMapEncoder_AddCodeSpaceRange(%struct.TYPE_8__* %33, i64 %37, i32 %39)
  %41 = load i64, i64* @HPDF_OK, align 8
  %42 = icmp ne i64 %40, %41
  br i1 %42, label %43, label %49

43:                                               ; preds = %32
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  store i64 %48, i64* %2, align 8
  br label %85

49:                                               ; preds = %32
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %51 = bitcast { i64, i32 }* %10 to i8*
  %52 = bitcast %struct.TYPE_9__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %51, i8* align 4 %52, i64 12, i1 false)
  %53 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %10, i32 0, i32 0
  %54 = load i64, i64* %53, align 4
  %55 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %10, i32 0, i32 1
  %56 = load i32, i32* %55, align 4
  %57 = call i64 @HPDF_CMapEncoder_AddCodeSpaceRange(%struct.TYPE_8__* %50, i64 %54, i32 %56)
  %58 = load i64, i64* @HPDF_OK, align 8
  %59 = icmp ne i64 %57, %58
  br i1 %59, label %60, label %66

60:                                               ; preds = %49
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %61, i32 0, i32 0
  %63 = load %struct.TYPE_7__*, %struct.TYPE_7__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %63, i32 0, i32 0
  %65 = load i64, i64* %64, align 8
  store i64 %65, i64* %2, align 8
  br label %85

66:                                               ; preds = %49
  %67 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %68 = bitcast { i64, i32 }* %11 to i8*
  %69 = bitcast %struct.TYPE_9__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %68, i8* align 4 %69, i64 12, i1 false)
  %70 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %11, i32 0, i32 0
  %71 = load i64, i64* %70, align 4
  %72 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %11, i32 0, i32 1
  %73 = load i32, i32* %72, align 4
  %74 = call i64 @HPDF_CMapEncoder_AddCodeSpaceRange(%struct.TYPE_8__* %67, i64 %71, i32 %73)
  %75 = load i64, i64* @HPDF_OK, align 8
  %76 = icmp ne i64 %74, %75
  br i1 %76, label %77, label %83

77:                                               ; preds = %66
  %78 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %79 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %78, i32 0, i32 0
  %80 = load %struct.TYPE_7__*, %struct.TYPE_7__** %79, align 8
  %81 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %80, i32 0, i32 0
  %82 = load i64, i64* %81, align 8
  store i64 %82, i64* %2, align 8
  br label %85

83:                                               ; preds = %66
  %84 = load i64, i64* @HPDF_OK, align 8
  store i64 %84, i64* %2, align 8
  br label %85

85:                                               ; preds = %83, %77, %60, %43, %26
  %86 = load i64, i64* %2, align 8
  ret i64 %86
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @HPDF_CMapEncoder_AddCodeSpaceRange(%struct.TYPE_8__*, i64, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
